Migrated Bootstrap and mustache from CDN to Local Files
Replaced Bootstrap and mustache CDN links with locally hosted Bootstrap files. Ensured proper linking in all relevant HTML files for improved project stability and offline access

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 .article-image {
     width: 80%;
-    aspect-ratio: 16 / 9;  /* or 4 / 3 depending on your design */
+    aspect-ratio: 16 / 9;  
     object-fit: cover;
 }
+
